--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="bg-img">
         <div class="container">
         <div class="topnav">
-        <a href="header.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
         <a href="https://ann910.wordpress.com/">Blog</a>
